# ascendancy_rts

./: .gitignore  CHANGELOG.md  CMakeLists.txt  ENGINE.md  LEGAL.md  PRIVACY.md  README.md  STORE.md  attribution.txt
.github/workflows/: ci.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  android_bridge.cpp  game_entry_android.cpp
android/app/src/main/java/com/ascendancy/rts/: MainActivity.java
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android/app/src/main/res/values/: strings.xml
assets/audio/: README.md  sfx_manifest.json
assets/data/: ai_build_orders.json  buildings.json  input_profiles.json  map_settings.json  quality.json  tech_tree.json  units.json
assets/data/localization/: en.json
assets/fonts/: OFL.txt  README.txt
assets/models/: README.md  sample_lowpoly.gltf
docs/: privacy.html
engine/audio/: audio.cpp  audio.h
engine/core/: arena.cpp  arena.h  jobs.cpp  jobs.h  log.h  profile.h
engine/ecs/: ecs.cpp  ecs.h
engine/gfx/: gfx.cpp  gfx.h  material.h
engine/math/: math.h  noise.cpp  noise.h
engine/net/: lockstep.cpp  lockstep.h
engine/path/: path.cpp  path.h
engine/platform/: fileio.h  platform.h  platform_android.cpp
engine/save/: save.cpp  save.h
engine/sim/: sim.cpp  sim.h
engine/ui/: ui.cpp  ui.h
game/: ai.cpp  ai.h  combat.cpp  combat.h  game.cpp  game.h  input.cpp  input.h  mapgen.cpp  mapgen.h  tech.cpp  tech.h  ui_hud.cpp
licenses/: LICENSE.dr_libs.txt  LICENSE.miniaudio.txt  LICENSE.open-font-license.txt  LICENSE.stb.txt  LICENSE.tinygltf.txt  LICENSE.zlib-raylib.txt  THIRD_PARTY_NOTICES.md
scripts/: build_debug.sh  build_release.sh  deploy_usb.sh  run_emulator.sh  setup_android.sh  sign_release.sh
tests/: CMakeLists.txt  test_combat.cpp  test_determinism.cpp  test_pathfinding.cpp
tools/: asset_importer.py  atlas_packer.py  localize_check.py  navgrid_builder.py
